# flink-statefun-tasks-demo

./: .gitattributes  .gitignore  README.md
demo_app/: Dockerfile  build.sh  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  stop.sh  tsconfig.json  upload.sh  vite.config.js  webpack.common.js  webpack.dev.js  webpack.prod.js
demo_app/py_files/: __init__.py  _flink_client.py  _websockets.py  server.py  worker.py
demo_app/py_files/api/: __init__.py  _api.py
demo_app/py_files/tasks/: __init__.py  _events.py  _inline.py  _tasks.py
demo_app/website/: index.html  index_template.html
demo_app/website/js/: app.js  app.tsx
demo_app/website/js/components/: Feature.js  Feature.tsx  Workflow.js
demo_app/website/js/modules/: reducers.js  reducers.ts
demo_app/website/js/modules/system/: systemSlice.js  workflowsSlice.js
demo_app/website/js/utils/: groupBy.js  subComponents.js  urlUtils.js  urlUtils.ts  webSockets.js  webSockets.ts
demo_app/website/js/views/: Layout.js  Layout.tsx
demo_app/website/js/views/features/: 00_headline.js  00_headline.tsx  01_worker.js  02_client.js  03_creating_tasks.js  04_calling_tasks.js  05_task_chaining.js  05_task_chaining.tsx  06_task_groups.js  07_limiting_concurrency.js  08_task_chains_and_groups.js  08_task_chains_and_groups.tsx  (+18 more)
demo_app/website/src/: app.tsx
demo_app/website/src/components/: Feature.tsx  Workflow.tsx
demo_app/website/src/utils/: groupBy.ts  subComponents.ts  webSockets.ts
demo_app/website/src/views/: Layout.tsx
demo_app/website/styles/: app.scss
(+34 files in other folders)
